# LearnOpenGL

app/: build.gradle
app/src/androidTest/java/com/bian/learnopengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: FirstFragmentShader.glsl  FirstVerticalShader.glsl  VAOFragmentShader.glsl  VAOVerticalShader.glsl
app/src/main/assets/shaders/: FirstPicFragmentShader.glsl  FirstPicVerticalShader.glsl
app/src/main/assets/shaders/video/: GpuFrameShader.glsl
app/src/main/cpp/: CMakeLists.txt  JNIControler.cpp  native-lib.cpp
app/src/main/cpp/cvmodule/: CMakeLists.txt
app/src/main/cpp/glbase/: AssetReader.c  Condition.cpp  Image.c  Mutex.cpp  Thread.cpp  esUtil.c  ijksdl_extra_log.c
app/src/main/cpp/glsurface/: CMakeLists.txt  GLJNIController.cpp
app/src/main/cpp/glsurface/header/: FirstVAORender.h
app/src/main/cpp/glsurface/render/: FirstVAORender.cpp
app/src/main/cpp/header/: AssetReader.h  BaseRender.h  Condition.h  FirstDrawer.h  GLJNIController.h  Image.h  JNIControler.h  Model.h  ModerRender.h  Mutex.h  NewBaseRender.h  PictureDrawer.h  RenderFactory.h  Thread.h  VBODrawer.h  esUtil.h  ijksdl_extra_log.h  ijksdl_log.h
app/src/main/cpp/header/assimp/: BaseImporter.h  Bitmap.h  BlobIOSystem.h  ByteSwapper.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  DefaultLogger.hpp  Defines.h  Exceptional.h  Exporter.hpp  GenericProperty.h  Hash.h  IOStream.hpp  IOStreamBuffer.h  IOSystem.hpp  Importer.hpp  LineSplitter.h  LogAux.h  LogStream.hpp  Logger.hpp  Macros.h  MathFunctions.h  MemoryIOWrapper.h  NullLogger.hpp  ParsingUtils.h  Profiler.h  ProgressHandler.hpp  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmoothingGroups.h  SmoothingGroups.inl  SpatialSort.h  StandardShapes.h  StreamReader.h  StreamWriter.h  StringComparison.h  StringUtils.h  (+40 more)
app/src/main/cpp/header/assimp/port/AndroidJNI/: AndroidJNIIOSystem.h
app/src/main/cpp/opencv/: CMakeLists.txt  OpenCvOpertion.cpp  OpencvController.cpp
app/src/main/cpp/opencv/header/: OpenCvOpertion.h  OpencvController.h
app/src/main/cpp/opengl/: BaseRender.cpp  BaseRender.h  CMakeLists.txt  FirstDrawer.cpp  FirstDrawer.h  JNIControler.cpp  Model.cpp  NewBaseRender.cpp  NewBaseRender.h  RenderFactory.cpp  RenderFactory.h
app/src/main/cpp/opengl/drawer/: FirstDrawer.cpp  ModerRender.cpp  ModerRender.h  OpenCvDrawer.cpp  PictureDrawer.cpp  SphereDrawer.cpp  VBODrawer.cpp
app/src/main/cpp/opengl/header/: BaseOfflineRender.h  FirstOffline.h  JNIControler.h  Mesh.h  Model.h  ModerRender.h  OpenCvDrawer.h  PictureDrawer.h  RenderFactory.h  SphereDrawer.h  VBODrawer.h
app/src/main/cpp/opengl/offscreen/: BaseOffScreenDrawer.cpp  BaseOffScreenDrawer.h  BaseOfflineRender.cpp  FirstOffline.cpp
app/src/main/cpp/video/: CMakeLists.txt  EGLContextHelper.cpp  EGLContextHelper.h  EGLWindowSurfaceHelper.cpp  EGLWindowSurfaceHelper.h  VideoJNI.cpp  VideoJNI.h  VideoRecorder.cpp  VideoRecorder.h  VideoRecorderPreviewer.cpp  VideoRecorderPreviewer.h
app/src/main/java/com/bian/learnopengl/: MainActivity.java  MainActivity.kt  MySurfaceView.java  OpenglActivity.java  VideoListActivity.java
app/src/main/java/com/bian/learnopengl/activity/: ActivityUtil.kt  GLSurfaceActivity.java  ImageListActivity.java  ImageListActivity.kt  OffLineActivity.java  OpencvActivity.java  OpenglActivity.java  VideoActivity.java  VideoListActivity.java  VideoListActivity.kt  VideoRecordActivity.kt
app/src/main/java/com/bian/learnopengl/adapter/: MyOperationAdapter.java
app/src/main/java/com/bian/learnopengl/base/: BaseActivity.java
app/src/main/java/com/bian/learnopengl/fragment/: FirstOpenCv.java  FirstOpenCvViewModel.java
app/src/main/java/com/bian/learnopengl/nativeutil/: GLSurfaceViewRender.java  MyRender.java  OpenCvUtil.java  VideoPlayer.java  VideoRecorder.java
app/src/main/java/com/bian/learnopengl/util/: CommonUtils.java  ConstantUtil.java  LogUtils.java
app/src/main/res/layout/: activity_g_l_surface_view.xml  activity_image_list.xml  activity_main.xml  activity_off_line.xml  activity_opengl.xml  activity_opengl2.xml  activity_video.xml  activity_video_list.xml  activity_video_list2.xml  activity_video_record.xml  first_open_cv_fragment.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/bian/learnopengl/: ExampleUnitTest.java
document/: build_armv7.bat  build_assimp.bat  build_x86.bat  build_x86_64.bat  crash_x86  make_standalone_toolchain.bat  make_x86.bat  make_x86_64.bat  ndktools  toolchain.bat
gradle/wrapper/: gradle-wrapper.properties
